force-app/main/default/objects/Registro_de_Sincronizacao__c/Registro_de_Sincronizacao__c.object-meta.xml
<CustomObject>
    <description>Objeto destino a registro log de sincronização entre dados do salesforce e aplicações third party.
Todos possuem acesso de leitura</description>
    <label>Registro de Sincronização</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Log de Sincronização Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros de Sincronização</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>