force-app/main/default/objects/Registro_de_Sincronizacao__c/fields/Objeto2__c.field-meta.xml
<CustomField>
    <fullName>Objeto2__c</fullName>
    <description>Descrição aqui</description>
    <inlineHelpText>Texto de ajuda aqui</inlineHelpText>
    <label>Objeto2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conta a Receber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>