force-app/main/default/objects/Registro_de_Sincronizacao__c/fields/Qtd_registro_criados_atualizados__c.field-meta.xml
<CustomField>
    <fullName>Qtd_registro_criados_atualizados__c</fullName>
    <label>Qtd registro criados/atualizados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>